# Neural_Network

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md
include/KHR/: khrplatform.h
include/glad/: glad.h
lib/: glad.c
src/: main.cc  main.cpp
src/game/: Action.hh  Controller.cc  Controller.hh  Engine.cc  Entity.cc  Entity.hh  Game.cc  Game.hh
src/render/: Window.cc  Window.hh
